tests/ui/bitmap_zero.stderr
error[E0080]: evaluation of constant value failed
 --> src/lib.rs
  |
  |     ["BIT_COUNT must be greater than zero"][(bit_count == 0) as usize];
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 1 but the index is 1
  |
note: inside `light_bitmap::assert_nonzero_bitcount`
 --> src/lib.rs
  |
  |     ["BIT_COUNT must be greater than zero"][(bit_count == 0) as usize];
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `BitMap::<0, 0>::new`
 --> src/lib.rs
  |
  |         assert_nonzero_bitcount(BIT_COUNT);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `BITMAP`
 --> tests/ui/bitmap_zero.rs:3:48
  |
3 | const BITMAP: BitMap<0, { bucket_count(0) }> = BitMap::new();
  |                                                ^^^^^^^^^^^^^
