tests/ui/bitmap_zero.rs
use light_bitmap::{bucket_count, BitMap};

const BITMAP: BitMap<0, { bucket_count(0) }> = BitMap::new();

fn main() {}
